# libdill

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CNAME  Makefile.am  README.md  aalloc.c  abasic.c  abi_version.sh  acache.c  alarm.c  alarm.h  amalloc.c  apage.c  apoll-epoll.c.inc  apoll-epoll.h.inc  apoll.c  apoll.h  apool.c  apport-stub.sh  appveyor.yml  blog.html  blog.md  brecv.html  brecv.md  brecvl.html  bsend.html  bsend.md  bsendl.html  bsock.c  bsock.html  bsock.md  bthrottler.html  bthrottler.md  btrace.c  btrace.html  btrace.md  build_options.html  build_options.md  (+375 more)
cmake/: Findlibdill.cmake
dns/: dns.c  dns.h
doc/: README.md  brecv.function.js  brecv.function.py  brecvl.function.js  brecvl.function.py  bsend.function.js  bsend.function.py  bsendl.function.js  bsendl.function.py  bundle.function.js  bundle.function.py  bundle_go.function.js  bundle_go.function.py  bundle_go_mem.function.py  bundle_wait.function.js  bundle_wait.function.py  bytestream.topic.py  channel.topic.py  chdone.function.js  chdone.function.py  chmake.function.js  chmake.function.py  choose.function.js  choose.function.py  chrecv.function.js  chrecv.function.py  chsend.function.js  chsend.function.py  cr.topic.js  cr.topic.py  deadline.topic.py  fd.topic.py  fdclean.function.js  fdclean.function.py  fdin.function.js  fdin.function.py  fdout.function.js  fdout.function.py  generate.js  generate.py  (+186 more)
examples/: Makefile.am  socks5proxy.c  tcpmuxd.c  webapp.c
libdill.xcodeproj/: project.pbxproj
libdill.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libdill.xcodeproj/project.xcworkspace/xcuserdata/ronaldo.xcuserdatad/: UserInterfaceState.xcuserstate
libdill.xcodeproj/xcuserdata/ronaldo.xcuserdatad/xcschemes/: libdill.xcscheme  xcschememanagement.plist
m4/: ax_valgrind_check.m4
man/: Makefile.am  brecv.3  brecv.html  brecv.md  brecvl.3  brecvl.md  bsend.3  bsend.html  bsend.md  bsendl.3  bsendl.md  bundle.3  bundle.html  bundle.md  bundle_go.3  bundle_go.html  bundle_go.md  bundle_go_mem.3  bundle_go_mem.html  bundle_go_mem.md  bundle_mem.3  bundle_mem.html  bundle_mem.md  bundle_wait.3  channel.md  chdone.3  chdone.html  chdone.md  chmake.3  chmake.html  chmake.md  chmake_mem.3  chmake_mem.html  chmake_mem.md  chmake_s.md  choose.3  choose.html  choose.md  chrecv.3  chrecv.html  (+260 more)
perf/: Makefile.am  chan.c  chdone.c  choose.c  chooserecv.c  choosesend.c  chr.c  chrecv.c  chs.c  chsend.c  ctxswitch.c  done.c  go.c  hdone.c  timer.c  whispers.c
rfc/: bsd-socket-api-revamp.md
spec/: README.md  bsock.js  chan.js  cr.js  deadline.js  fd.js  handle.js  http.js  ipaddr.js  ipc.js  msock.js  prefix.js  spec.js  suffix.js  tcp.js  term.js  tls.js  udp.js  ws.js
templates/: documentation-footer.md  header.html
tests/: Makefile.am  aalloc.c  assert.h  btrace.c  bundle.c  chan.c  choose.c  cls.c  crlf.c  ctrl.c  dtls.c  example.c  fd.c  fdwait.c  go.c  go1.c  go2.c  go3.c  go4.c  go5.c  handle.c  happyeyeballs.c  heap.c  hset.c  http.c  hup.c  iol.c  ipaddr.c  ipc.c  mtrace.c  nacl.c  overload.c  pfx.c  postfix.c  prefix.c  proc.c  proc1.c  proc2.c  proc3.c  proc4.c  (+16 more)
tests/quickcheck/: README.md  libdill-quickcheck.cabal  stack.yaml
tests/quickcheck/test/: ChannelQC.hs  QuickCheck.hs
tests/quickcheck/test/FFI/: Channels.hs  Handles.hs  Helpers.hs  TestCaseFFI.hs
tests/quickcheck/test/FFI/lib/: test-ffi.c  test-ffi.h
tutorial/: Makefile.am  step1.c  step2.c  step3.c  step4.c  step5.c
tutorial/basics/: step1.c  step2.c  step3.c  step4.c  step5.c  step6.c
tutorial/protocol/: step1.c  step2.c  step3.c  step4.c  step5.c  step6.c  step7.c  step8.c  step9.c
tutorial/sockets/: step1.c  step2.c  step3.c  step4.c  step5.c
website/: brecv.html  brecvl.html  bsend.html  bsendl.html  build_options.html  bundle.html  bundle_go.html  bundle_go_mem.html  bundle_mem.html  bundle_wait.html  chdone.html  chmake.html  chmake_mem.html  choose.html  chrecv.html  chsend.html  compatibility.html  crlf_attach.html  crlf_attach_mem.html  crlf_detach.html  documentation.html  download.html  faq.html  fdclean.html  fdin.html  fdout.html  generate.sh  go.html  go_mem.html  hclose.html  hdone.html  hdup.html  hmake.html  hown.html  hquery.html  http_attach.html  http_attach_mem.html  http_detach.html  http_done.html  http_recvfield.html  (+97 more)
website/src/: build_options.md  compatibility.md  composite1.dia  composite2.dia  composite3.dia  documentation.md.footer  documentation.md.header  download.md  faq.md  header.html  index1.dia  index2.dia  index3.dia  index4.dia  libdill-history.md  structured-concurrency.md  threads.md  tutorial-basics.md  tutorial-protocol.md  tutorial-sockets.md  tutorial.md  usecase1.dia  usecase10.dia  usecase3.dia  usecase4.dia  usecase5.dia  usecase8.dia  usecase9.dia
wepoll/: wepoll.c  wepoll.h
