#
# Copyright (c) 2016 Martin Sustrik  All rights reserved.
# Copyright (c) 2013 Luca Barbato
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom
# the Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

ACLOCAL_AMFLAGS = -I m4

################################################################################
#  libdill library                                                             #
################################################################################

dillincludedir = $(includedir)
dillinclude_HEADERS = libdill.h

lib_LTLIBRARIES = libdill.la

libdill_la_SOURCES = \
    chan.h \
    chan.c \
    cr.h \
    cr.c \
    debug.h \
    debug.c \
    handle.c \
    list.h \
    list.c \
    poller.h \
    poller.c \
    slist.h \
    slist.c \
    stack.h \
    stack.c \
    timer.h \
    timer.c \
    utils.h \
    poll.inc \
    epoll.inc \
    kqueue.inc

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libdill.pc

libdill_la_LDFLAGS = -no-undefined -version-info @DILL_LIBTOOL_VERSION@

# Turn the source fortification in glibc off - otherwise it would panic
# because of the stack pointer black magic in 'go' macro.
libdill_la_CFLAGS = \
    -fvisibility=hidden\
    -DDILL_EXPORTS \
    -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=0

################################################################################
#  automated tests                                                             #
################################################################################

check_PROGRAMS = \
    tests/example \
    tests/go \
    tests/cls \
    tests/chan \
    tests/choose \
    tests/sleep \
    tests/fdwait \
    tests/signals \
    tests/overload

LDADD = libdill.la

TESTS = $(check_PROGRAMS)

################################################################################
#  additional packaging-related stuff                                          #
################################################################################

#  Generate ChangeLog file from git.
#  Also, there's no git availabe when building from the source package and
#  thus no way to obtain package version. Therefore, package version is
#  saved into a file when building a source package.
dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog; \
		cd "$(top_srcdir)"; \
		(echo '# Generated by Makefile. Do not edit.'; echo; \
		  ./missing --run git log --decorate ) > ChangeLog.tmp; \
		mv -f ChangeLog.tmp $(top_distdir)/ChangeLog; \
		rm -f ChangeLog.tmp; \
    else \
        cp -f ChangeLog $(top_distdir)/ChangeLog || \
        echo Failed to generate ChangeLog >&2; \
	fi; \
	$(srcdir)/package_version.sh > $(distdir)/.version

EXTRA_DIST = \
    ./abi_version.sh \
    ./package_version.sh

distclean-local:
	-rm -f config.h

